# Repo-Surgeon

./: .env.example  .gitignore  README.md  START_TESTING.md  pyproject.toml
.claude/: launch.json
dashboard/: DESIGN.md  next.config.ts  package-lock.json
dashboard/.claude/: launch.json
docker/node/: Dockerfile
docker/python/: Dockerfile
docs/: DASHBOARD_IMPLEMENTATION_PLAN.md
repo_surgeon/: __init__.py  app.py  ci.py  codex_runner.py  contracts.py  events.py  github_layer.py  interfaces.py  jobstore.py  live_logs.py  llm.py  model_policy.py  orchestrator.py  planner.py  researcher.py  surgeon.py  trace.py
repo_surgeon/mocks/: __init__.py  mock_sandbox.py  services.py
repo_surgeon/research/: __init__.py  budget.py  cache.py  config.py  limiter.py  policy.py  providers.py  rate_limits.py  summarizer.py
repo_surgeon/sandbox/: __init__.py  command_runner.py  errors.py  manager.py  models.py  policy.py
repo_surgeon/scout/: __init__.py  baseline_runner.py  command_detector.py  coverage.py  dependency_collector.py  profile_writer.py  service.py  stack_detector.py
repo_surgeon/security/: __init__.py  normalizer.py  npm_audit.py  osv.py  pip_audit.py  service.py
repo_surgeon/verifier/: __init__.py  (+7 more)
scratch/: diff.txt
tests/: conftest.py  test_app.py  test_audit.py  test_codex_runner.py  test_codex_runner_diff.py  test_faiz_components.py  test_mayank_services.py  test_model_policy.py  test_orchestrator.py  test_planner.py  test_rate_limits.py  test_research_optimization.py  test_scout_bootstrap.py  test_surgeon.py  test_trace.py  test_verifier_fixes.py
(+26 files in other folders)
