[project]
name = "repo-surgeon"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = ["fastapi>=0.115", "pydantic>=2.0", "openai>=1.0", "uvicorn>=0.30"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "httpx>=0.27"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["repo_surgeon*"]
